# portfolio

./: README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  중간저장_프롬프트.txt
backend/src/api/: router.py
frontend/src/api/: newsApi.ts
src/: App.vue  env.d.ts  langchain_controller.py  langgraph_workflow.py  main.ts  style.css
src/api/: news_api.py  tavily_api.py
src/assets/: main.css
src/components/: ModelContextManager.vue
src/components/icons/: index.ts
src/composables/: useTheme.ts
src/pages/: LangChainTest.vue  StockAnalysis.vue  SustainableView.vue
src/router/: index.ts
src/services/: modelContextService.ts  naverNewsService.ts  newsService.ts
src/storage/: __init__.py  news_storage.py
src/stores/: modelContext.ts  news.ts  stock.ts  sustainable.ts
