[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.9.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
]
