[project]
name = "news-collector"
version = "0.1.0"
description = "뉴스 수집 및 분석 시스템"
authors = [
    {name = "Daewon", email = "your.email@example.com"}
]
dependencies = [
    "sanic~=23.12.1",
    "sanic-ext~=23.12.0",
    "langchain~=0.1.11",
    "openai~=1.12.0",
    "motor~=3.3.2",
    "pymongo~=4.6.2",
    "aiohttp~=3.9.3",
    "python-dotenv~=1.0.1",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
