[project]
name = "news-collector"
version = "0.1.0"
description = "뉴스 수집 및 분석 시스템"
authors = [
    { name = "Daewon", email = "sodagraph@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    # 웹 서버
    "sanic~=23.12.1",
    "sanic-ext~=23.12.0",

    # LangChain 생태계 (버전 일치 중요!)
    "langchain==0.3.25",
    "langchain-core==0.3.65",
    "langgraph==0.4.8",

    # OpenAI API
    "openai~=1.12.0",

    # MongoDB 연동
    "motor~=3.3.2",
    "pymongo~=4.6.2",

    # 비동기 HTTP 요청
    "aiohttp~=3.9.3",

    # 환경 변수 관리
    "python-dotenv~=1.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
